// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VCheckbox should emit events when clicked 1`] = `
<div class="v-checkbox v-checkbox--checked">
  <div class="v-checkbox__square">
    <i class="v-icon far fa-check-square primary--text"
       style="font-size: 16px;"
    >
    </i>
  </div>
</div>
`;

exports[`VCheckbox should mount component and match snapshot 1`] = `
<div class="v-checkbox">
  <div class="v-checkbox__square">
    <i class="v-icon far fa-square primary--text"
       style="font-size: 16px;"
    >
    </i>
  </div>
</div>
`;

exports[`VCheckbox should set disabled and match snapshot 1`] = `
<div class="v-checkbox v-checkbox--disabled">
  <div class="v-checkbox__square">
    <i class="v-icon v-icon--disabled far fa-square primary--text"
       style="font-size: 16px;"
    >
    </i>
  </div>
</div>
`;

exports[`VCheckbox should set label and match snapshot 1`] = `
<div class="v-checkbox">
  <div class="v-checkbox__square">
    <i class="v-icon far fa-square primary--text"
       style="font-size: 16px;"
    >
    </i>
  </div>
  <div class="v-checkbox__label">
    <label class="v-label"
           absolute="false"
    >
      checkbox label
    </label>
  </div>
</div>
`;

exports[`VCheckbox should set validate and match snapshot 1`] = `
<div class="v-checkbox v-validatable">
  <div class="v-checkbox__square">
    <i class="v-icon far fa-square primary--text"
       style="font-size: 16px;"
    >
    </i>
  </div>
</div>
`;

exports[`VCheckbox should set validate and match snapshot 2`] = `
<div class="v-checkbox v-validatable">
  <div class="v-checkbox__square">
    <i class="v-icon far fa-square primary--text"
       style="font-size: 16px;"
    >
    </i>
  </div>
</div>
`;
